<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2019 by Agnieszka Maciejewska, Maciej Królik, Krzysztof Mikołajczyk. TricityTravel
  ~ This application is licensed under the Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License. To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-nd/4.0/.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_sun"
        android:title="@string/weather" />

    <item
        android:id="@+id/publicTransportFragment"
        android:icon="@drawable/ic_tram"
        android:title="@string/ZTM" />

    <item
        android:id="@+id/carFragment"
        android:icon="@drawable/ic_car"
        android:title="@string/car" />

    <item
        android:id="@+id/trojmiastoFragment"
        android:icon="@drawable/ic_trojmiasto"
        android:title="@string/report" />

</menu>