...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather_settings"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/weatherEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/city"
                        android:inputType="text" />

...
