...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.settingsfragment.choosekeywordsfragment.SettingsChooseKeywordFragment">

        <EditText
            android:id="@+id/addKeywordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_keyword"
            android:inputType="text" />

        <TextView
...
