<!--
  ~ Copyright © 2019 by Agnieszka Maciejewska, Maciej Królik, Krzysztof Mikołajczyk. TricityTravel
  ~ This application is licensed under the Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License. To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-nd/4.0/.
  -->

<resources>
    <string name="app_name" translatable="false">TricityTravel</string>
    <string name="settings">Settings</string>
    <string name="public_transport">Public transport</string>
    <string name="direction">Direction:</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="delay">Delay:</string>
    <string name="theoretical_time">Theoretical time:</string>
    <string name="delayed">Delayed</string>
    <string name="on_time">On time</string>
    <string name="ahead_of_time">Ahead of time</string>
    <string name="public_transport_settings">Public transport settings</string>
    <string name="add">Add</string>
    <string name="search_stops">Search stops</string>
    <string name="edit_stop_list">Edit stop list</string>
    <string name="refresh_stops">Refresh stops</string>
    <string name="choose_bus_number">Choose bus number</string>
    <string name="save">Save</string>
    <string name="currently_no_buses">Currently no buses</string>
    <string name="add_stops_in_settings">Add stops in settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_really_want_to_delete">Do you really want to delete?</string>
    <string name="refresh">Refresh</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="weather_settings">Weather settings</string>
    <string name="saved">saved</string>
    <string name="city">City</string>
    <string name="car">Car</string>
    <string name="where_are_you_travelling_today">Where are you travelling today?</string>
    <string name="time_of_travel">Time of travel</string>
    <string name="start_location">Start location</string>
    <string name="end_location">End location</string>
    <string name="car_summary">that\'s how much it will take you to get to your destination</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="incorrect_locations">Incorrect locations</string>
    <string name="report">Report</string>
    <string name="weather">Weather</string>
    <string name="trojmiasto_pl_report_settings">Trojmiasto.pl report settings</string>
    <string name="edit_keyword_list">Edit keyword list</string>
    <string name="add_keyword">Add keyword</string>
    <string name="no_keywords_entered">No keywords entered</string>
    <string name="no_news_containing_your_keywords">No news containing your keywords</string>
    <string name="filter">Filter</string>
    <string name="ZTM" translatable="false">ZTM</string>
</resources>
