<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2019 by Agnieszka Maciejewska, Maciej Królik, Krzysztof Mikołajczyk. TricityTravel
  ~ This application is licensed under the Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License. To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-nd/4.0/.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.aib.tricitytravel.ui.settingsfragment.selectstopfragment.SettingsSelectStopViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/selectStopEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_stops"
            android:inputType="text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectStopRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
            tools:visibility="visible" />

        <ProgressBar
            android:layout_width="@dimen/progress_indicator_size"
            android:layout_height="@dimen/progress_indicator_size"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />

    </LinearLayout>

</layout>
